docs/api/qiskit/0.30/aer_extensions.mdx
---
title: extensions (v0.30)
description: API reference for qiskit.providers.aer.extensions in qiskit v0.30
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit.providers.aer.extensions
---

<span id="module-qiskit.providers.aer.extensions" />

<span id="aer-circuit-extensions" />

<span id="circuit-extensions-qiskit-providers-aer-extensions" />

# Circuit Extensions

`qiskit.providers.aer.extensions`

## Snapshots

<Admonition title="Deprecated since version 0.9.0" type="danger">
  Adding nonlocal noise to a noise model is deprecated as of qiskit-aer 0.9.0 and will be removed no earlier than 3 months from that release date. They have been superceded by the save instructions in the [`qiskit.providers.aer.library`](aer_library#module-qiskit.providers.aer.library "qiskit.providers.aer.library") module.
</Admonition>

Snapshot instructions allow taking a snapshot of the current state of the simulator without effecting the outcome of the simulation. These can be used with the QasmSimulator backend to return the expectation value of an operator or the probability of measurement outcomes.

|                                                                                                                                                                    |                                                                   |
| ------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------- |
| [`Snapshot`](qiskit.providers.aer.extensions.Snapshot "qiskit.providers.aer.extensions.Snapshot")(label\[, snapshot\_type, num\_qubits, …])                        | Simulator snapshot instruction.                                   |
| [`SnapshotProbabilities`](qiskit.providers.aer.extensions.SnapshotProbabilities "qiskit.providers.aer.extensions.SnapshotProbabilities")(label, num\_qubits\[, …]) | Snapshot instruction for all methods of Qasm simulator.           |
| [`SnapshotExpectationValue`](qiskit.providers.aer.extensions.SnapshotExpectationValue "qiskit.providers.aer.extensions.SnapshotExpectationValue")(label, op\[, …]) | Snapshot instruction for supported methods of Qasm simulator.     |
| [`SnapshotStatevector`](qiskit.providers.aer.extensions.SnapshotStatevector "qiskit.providers.aer.extensions.SnapshotStatevector")(label\[, num\_qubits])          | Snapshot instruction for statevector snapshot type                |
| [`SnapshotDensityMatrix`](qiskit.providers.aer.extensions.SnapshotDensityMatrix "qiskit.providers.aer.extensions.SnapshotDensityMatrix")(label, num\_qubits)       | Snapshot instruction for density matrix method of Qasm simulator. |
| [`SnapshotStabilizer`](qiskit.providers.aer.extensions.SnapshotStabilizer "qiskit.providers.aer.extensions.SnapshotStabilizer")(label\[, num\_qubits])             | Snapshot instruction for stabilizer method of Qasm simulator.     |

